# cpp_project_cmake_template

./: .gitignore  CMakeLists.txt  main.cpp
include/: App.hpp
src/: main.cpp
